feat: Add password reset, email verification, and admin user management

--- a/frontend-html/login.html
+++ b/frontend-html/login.html
@@ -40,6 +40,12 @@
           />
         </div>
 
+        <div class="flex items-center justify-end">
+          <a href="/forgot-password.html" class="text-sm text-blue-600 hover:text-blue-700">
+            Forgot password?
+          </a>
+        </div>
+
         <button
           type="submit"
           id="submitBtn"
