--- a/frontend-html/admin.html
+++ b/frontend-html/admin.html
@@ -10,7 +10,12 @@
   <div id="navigation"></div>
 
   <main class="max-w-7xl mx-auto px-4 py-12">
-    <h1 class="text-3xl font-bold text-gray-900 mb-6">Admin Panel</h1>
+    <div class="flex justify-between items-center mb-6">
+      <h1 class="text-3xl font-bold text-gray-900">Admin Panel</h1>
+      <a href="/admin-users.html" class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
+        Manage Users
+      </a>
+    </div>
 
     <div id="message"></div>
 
