Fix form submission and improve calendar experience
- Fix form validation: Only validate date (not time) to prevent blocking future bookings
- Update confirmation message from 3-7 to 1 working day
- Change calendar default view from month to weekly timeGrid
- Add business hours display (6 AM - 10 PM) with 30-min slots
- Add space filter dropdown to calendar for filtering events by space
- Professional overlapping events display in weekly view
- Keep 15-minute time picker intervals for easy selection

--- a/frontend-html/booking-form.html
+++ b/frontend-html/booking-form.html
@@ -16,7 +16,7 @@
         <h1 class="text-3xl font-bold mb-4 text-gray-900">Coders HQ Venue Booking</h1>
         <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-4">
           <p class="text-sm text-gray-700 mb-2">
-            Kindly fill the below details to book the Coders HQ space. A confirmation email will be sent within <strong>3-7 working days</strong>.
+            Kindly fill the below details to book the Coders HQ space. A confirmation email will be sent within <strong>1 working day</strong>.
           </p>
           <p class="text-xs text-gray-600 italic">
             When you submit this form, it will not automatically collect your details like name and email address unless you provide it yourself.
