--- a/frontend-html/calendar.html
+++ b/frontend-html/calendar.html
@@ -22,19 +22,29 @@
 
       <div id="message"></div>
 
-      <!-- Legend -->
-      <div class="mb-4 flex flex-wrap gap-4 text-sm">
-        <div class="flex items-center">
-          <div class="w-4 h-4 bg-green-500 rounded mr-2"></div>
-          <span class="text-gray-700">Co-working Space</span>
+      <!-- Space Filter and Legend -->
+      <div class="mb-6">
+        <div class="mb-4">
+          <label for="spaceFilter" class="block text-sm font-medium text-gray-700 mb-2">Filter by Space</label>
+          <select id="spaceFilter" class="w-full md:w-64 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <option value="">All Spaces</option>
+          </select>
         </div>
-        <div class="flex items-center">
-          <div class="w-4 h-4 bg-blue-500 rounded mr-2"></div>
-          <span class="text-gray-700">Lecture Room</span>
-        </div>
-        <div class="flex items-center">
-          <div class="w-4 h-4 bg-purple-500 rounded mr-2"></div>
-          <span class="text-gray-700">Meeting Room</span>
+
+        <!-- Legend -->
+        <div class="flex flex-wrap gap-4 text-sm">
+          <div class="flex items-center">
+            <div class="w-4 h-4 bg-green-500 rounded mr-2"></div>
+            <span class="text-gray-700">Co-working Space</span>
+          </div>
+          <div class="flex items-center">
+            <div class="w-4 h-4 bg-blue-500 rounded mr-2"></div>
+            <span class="text-gray-700">Lecture Room</span>
+          </div>
+          <div class="flex items-center">
+            <div class="w-4 h-4 bg-purple-500 rounded mr-2"></div>
+            <span class="text-gray-700">Meeting Room</span>
+          </div>
         </div>
       </div>
 
