--- a/frontend-html/booking-form.html
+++ b/frontend-html/booking-form.html
@@ -245,7 +245,7 @@
                 <span class="text-sm text-gray-700">Classroom</span>
               </label>
               <label class="flex items-center">
-                <input type="radio" name="seating" value="U_SHAPE" class="mr-2">
+                <input type="radio" name="seating" value="USHAPE" class="mr-2">
                 <span class="text-sm text-gray-700">U shape</span>
               </label>
             </div>
@@ -303,10 +303,40 @@
           </div>
         </div>
 
+        <!-- Event Visibility -->
+        <div class="border-b pb-6 mb-6">
+          <h2 class="text-xl font-semibold mb-2 text-gray-800">15. Event Visibility</h2>
+          <p class="text-xs text-gray-600 mb-4">Choose who can see this event on the public calendar</p>
+
+          <div class="space-y-2">
+            <label class="flex items-start">
+              <input type="radio" name="visibility" value="PUBLIC" checked class="mr-3 mt-1">
+              <div>
+                <span class="text-sm font-medium text-gray-700">Public</span>
+                <p class="text-xs text-gray-500">Event will be visible to everyone on the calendar</p>
+              </div>
+            </label>
+            <label class="flex items-start">
+              <input type="radio" name="visibility" value="INTERNAL" class="mr-3 mt-1">
+              <div>
+                <span class="text-sm font-medium text-gray-700">Internal</span>
+                <p class="text-xs text-gray-500">Event visible only to internal staff members</p>
+              </div>
+            </label>
+            <label class="flex items-start">
+              <input type="radio" name="visibility" value="PRIVATE" class="mr-3 mt-1">
+              <div>
+                <span class="text-sm font-medium text-gray-700">Private</span>
+                <p class="text-xs text-gray-500">Event will not appear on the public calendar (admin only)</p>
+              </div>
+            </label>
+          </div>
+        </div>
+
         <!-- Additional Comments -->
         <div class="mb-6">
           <label for="comments" class="block text-sm font-medium text-gray-700 mb-2">
-            15. Any additional comments or details
+            16. Any additional comments or details
           </label>
           <textarea
             id="comments"
@@ -315,9 +345,6 @@
             class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
           ></textarea>
         </div>
-
-        <!-- Visibility (Hidden field, defaults to PUBLIC) -->
-        <input type="hidden" id="visibility" value="PUBLIC">
 
         <button
           type="submit"
