--- a/frontend-html/booking-form.html
+++ b/frontend-html/booking-form.html
@@ -270,38 +270,123 @@
             <p id="attendees-capacity" class="text-xs text-gray-500 mt-1 hidden"></p>
           </div>
 
-          <!-- Seating Arrangement -->
-          <div class="mb-6">
-            <label class="block text-sm font-medium text-gray-700 mb-3">
-              12. Seating Arrangement <span class="text-red-500">*</span>
-            </label>
-            <div class="grid md:grid-cols-2 gap-3">
-              <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
-                <div class="flex items-center">
-                  <input type="radio" name="seating" value="THEATRE" required class="mr-3 w-4 h-4 text-blue-600">
-                  <span class="text-sm font-semibold text-gray-800">Theatre Style</span>
-                </div>
+          <!-- Lecture Room Specific Fields (Hidden by default) -->
+          <div id="lectureRoomFields" class="hidden space-y-6">
+            <!-- Speaker -->
+            <div>
+              <label for="speaker" class="block text-sm font-medium text-gray-700 mb-2">
+                Speaker Name/Info <span class="text-red-500">*</span>
               </label>
-              <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
-                <div class="flex items-center">
-                  <input type="radio" name="seating" value="WORKSHOP" class="mr-3 w-4 h-4 text-blue-600">
-                  <span class="text-sm font-semibold text-gray-800">Workshop Style</span>
-                </div>
-              </label>
-              <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
-                <div class="flex items-center">
-                  <input type="radio" name="seating" value="CLASSROOM" class="mr-3 w-4 h-4 text-blue-600">
-                  <span class="text-sm font-semibold text-gray-800">Classroom Style</span>
-                </div>
-              </label>
-              <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
-                <div class="flex items-center">
-                  <input type="radio" name="seating" value="USHAPE" class="mr-3 w-4 h-4 text-blue-600">
-                  <span class="text-sm font-semibold text-gray-800">U-Shape Style</span>
-                </div>
-              </label>
+              <input
+                type="text"
+                id="speaker"
+                placeholder="Enter speaker name or information"
+                class="input-field w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all"
+              />
+              <p id="speaker-error" class="text-xs text-red-600 mt-1 hidden"></p>
             </div>
-            <p id="seating-error" class="text-xs text-red-600 mt-2 hidden"></p>
+
+            <!-- Topic -->
+            <div>
+              <label for="topic" class="block text-sm font-medium text-gray-700 mb-2">
+                Lecture Topic <span class="text-red-500">*</span>
+              </label>
+              <input
+                type="text"
+                id="topic"
+                placeholder="Enter the main topic of the lecture"
+                class="input-field w-full px-4 py-3 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all"
+              />
+              <p id="topic-error" class="text-xs text-red-600 mt-1 hidden"></p>
+            </div>
+
+            <!-- Organizing Partners -->
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-2">
+                Organizing Partners <span class="text-red-500">*</span>
+              </label>
+              <div id="partnersContainer" class="space-y-2">
+                <div class="flex gap-2 partner-entry">
+                  <input
+                    type="text"
+                    class="partner-input input-field flex-1 px-4 py-3 border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all"
+                    placeholder="Partner organization name"
+                  />
+                  <button type="button" class="remove-partner-btn hidden px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-all">
+                    Remove
+                  </button>
+                </div>
+              </div>
+              <button type="button" id="addPartnerBtn" class="mt-3 px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600 transition-all flex items-center">
+                <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                </svg>
+                Add Partner
+              </button>
+              <p id="partners-error" class="text-xs text-red-600 mt-1 hidden"></p>
+            </div>
+
+            <!-- Depth Level -->
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-3">
+                Level of Depth <span class="text-red-500">*</span>
+              </label>
+              <div class="grid md:grid-cols-3 gap-3">
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="depthLevel" value="EXPLORATION" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">Exploration</span>
+                  </div>
+                </label>
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="depthLevel" value="PROFESSIONAL" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">Professional</span>
+                  </div>
+                </label>
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="depthLevel" value="ADVANCED" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">Advanced</span>
+                  </div>
+                </label>
+              </div>
+              <p id="depthLevel-error" class="text-xs text-red-600 mt-2 hidden"></p>
+            </div>
+
+            <!-- Seating Arrangement (for Lecture Room only) -->
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-3">
+                Seating Arrangement <span class="text-red-500">*</span>
+              </label>
+              <div class="grid md:grid-cols-2 gap-3">
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="seating" value="THEATRE" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">Theatre Style</span>
+                  </div>
+                </label>
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="seating" value="WORKSHOP" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">Workshop Style</span>
+                  </div>
+                </label>
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="seating" value="CLASSROOM" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">Classroom Style</span>
+                  </div>
+                </label>
+                <label class="radio-card cursor-pointer block p-4 border-2 border-gray-200 rounded-lg hover:bg-gray-50">
+                  <div class="flex items-center">
+                    <input type="radio" name="seating" value="USHAPE" class="mr-3 w-4 h-4 text-blue-600">
+                    <span class="text-sm font-semibold text-gray-800">U-Shape Style</span>
+                  </div>
+                </label>
+              </div>
+              <p id="seating-error" class="text-xs text-red-600 mt-2 hidden"></p>
+            </div>
           </div>
 
           <div class="mb-4">
